started developing jira board

--- a/jiraboard/src/App.css
+++ b/jiraboard/src/App.css
@@ -2,3 +2,15 @@
   margin: 0px;
   padding: 0px;
 }
+
+.app{
+  display: grid;
+  grid-template-rows: 150px auto;
+}
+
+.app_main{
+  display: flex;
+  justify-content:space-evenly;
+  padding: 20px 8%;
+}
+
